@@ -5,7 +5,8 @@ import jakarta.ws.rs.ext.ParamConverter;
 import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
+
+import static java.util.stream.Collectors.joining;
 
 public class UUIDListParamConverter implements ParamConverter<List<UUID>> {
 
@@ -17,13 +18,13 @@ public class UUIDListParamConverter implements ParamConverter<List<UUID>> {
         return Arrays.stream(value.split(","))
                 .map(String::trim)
                 .map(UUID::fromString)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public String toString(List<UUID> value) {
         return value.stream()
                 .map(UUID::toString)
-                .collect(Collectors.joining(","));
+                .collect(joining(","));
     }
 }
